--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <img src="floricultura.png" alt="inserir a descrição da imagem">
+    <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
     <h1>Menu</h1>
     <li><a href="link01.html "> Link 01 </a> </li>
     <li><a href="link02.html "> Link 02 </a> </li>
