--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -9,10 +10,10 @@
 <body>
     <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
     <h1>Menu</h1>
-    <li><a href="link01.html "> Link 01 </a> </li>
-    <li><a href="link02.html "> Link 02 </a> </li>
-    <li><a href="link03.html "> Link 03 </a> </li>
-    <li><a href="link04.html "> Link 04 </a> </li>
-    <li><a href="link05.html "> Link 05 </a> </li>
+    <li> <a href="link01.html "> Link 01 </a> </li>
+    <li> <a href="link02.html "> Link 02 </a> </li>
+    <li> <a href="link03.html "> Link 03 </a> </li>
+    <li> <a href="link04.html "> Link 04 </a> </li>
+    <li> <a href="link05.html "> Link 05 </a> </li>
 </body>
 </html>
