--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <body>
     <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
     <h1>Menu</h1>
-    <li> <a href="link01.html "> Link 01 </a> </li>
-    <li> <a href="link02.html "> Link 02 </a> </li>
-    <li> <a href="link03.html "> Link 03 </a> </li>
-    <li> <a href="link04.html "> Link 04 </a> </li>
-    <li> <a href="link05.html "> Link 05 </a> </li>
+    <li> <a href="home.html "> Home </a> </li>
+    <li> <a href="kits.html "> kits </a> </li>
+    <li> <a href="arranjos.html "> Arranjos</a> </li>
+    <li> <a href="promocoes.html "> Promoções </a> </li>
+    <li> <a href="tiposdeflores.html "> Tipos de Flores </a> </li>
+    <li> <a href="maisvendidas.html "> Mais Vendidas </a> </li>
 </body>
 </html>
