--- a/index.html
+++ b/index.html
@@ -16,5 +16,6 @@
     <li> <a href="promocoes.html "> Promoções </a> </li>
     <li> <a href="tiposdeflores.html "> Tipos de Flores </a> </li>
     <li> <a href="maisvendidas.html "> Mais Vendidas </a> </li>
+    <li> <a href="atendimento.html "> Atendimento </a> </li>
 </body>
 </html>
