--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
-    <h1>Menu</h1>
+    <h1>Opções</h1>
     <li> <a href="home.html "> Home </a> </li>
     <li> <a href="kits.html "> kits </a> </li>
     <li> <a href="arranjos.html "> Arranjos</a> </li>
