--- a/home.html
+++ b/home.html
@@ -9,27 +9,40 @@
     <img src="flor_home.jpg" width="2000" alt=" "   width="20%" height="180">
     <h3></br>
     <tr> 
-        <font color="red">Home</font> 
+        <font color="red"><a href="home.html">Home</a></font> 
     </tr>
     <tr> 
-        <font color="red">Kits</font> 
+        <font color="red"><a href="kits.html">Kits</a></font> 
     </tr>
     <tr> 
-        <font color="red">Arranjos</font> 
+        <font color="red"><a href="arranjos.html">Arranjos</a></font> 
     </tr>
     <tr> 
-        <th>Promoções</th>
+        <font color="red"><a href="promocoes.html">Promoções</a></font>
     </tr>
     <tr> 
-        <th>Tipos de Flores</th>
+        <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
     </tr>
     <tr> 
-        <th>Mais Vendidas</th>
+        <font color="red"><a href="maisvendidas.html">Mais Vendidas</a></font>
     </tr>
     <tr> 
-        <th>Atendimentos</th>
+        <font color="red"><a href="atendimento.html">Atendimentos</a></font>
     </tr>
 </h3>
+    <td>Promoções: </td> </br></br>
+    <tr> 
+    <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Azaléia </br>R$ 20,00</td></br>
+    <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Rosa do Deserto </br>R$ 150,00</td></br>
+    <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Orquídea</br><R175></R75>R$ 75,00</td></br>
+    <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Rosas Vermelhas</br><R175></R75>R$ 15,00</td></br>
+    <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Tulipas</br><R175></R75>R$ 30,00</td></br>
 
+</tr>
 </body>
 </html>
