--- a/home.html
+++ b/home.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -6,7 +7,7 @@
     <title>Home</title>
 </head>
 <body>
-    <img src="flor_home.jpg" width="2000" alt=" "   width="20%" height="180">
+    <img src="flor_home.jpeg" width="1800" alt=" "   width="20%" height="180">
     <h3></br>
     <tr> 
         <font color="red"><a href="home.html">Home</a></font> 
