--- a/home.html
+++ b/home.html
@@ -3,10 +3,10 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
     <title>Home</title>
 </head>
-<body>
+<body >
     <img src="flor_home.jpeg" width="1800" alt=" "   width="20%" height="180">
     <h3></br>
     <tr> 
@@ -19,9 +19,6 @@
         <font color="red"><a href="arranjos.html">Arranjos</a></font> 
     </tr>
     <tr> 
-        <font color="red"><a href="promocoes.html">Promoções</a></font>
-    </tr>
-    <tr> 
         <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
     </tr>
     <tr> 
@@ -31,19 +28,28 @@
         <font color="red"><a href="atendimento.html">Atendimentos</a></font>
     </tr>
 </h3>
+<div>
     <td>Promoções: </td> </br></br>
     <tr> 
     <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
     <td ></br>Azaléia </br>R$ 20,00</td></br>
+    </tr>
+    <tr>
     <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
     <td ></br>Rosa do Deserto </br>R$ 150,00</td></br>
+    </tr>
+    <tr>
     <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
     <td ></br>Orquídea</br><R175></R75>R$ 75,00</td></br>
+    </tr>
+    <tr>
     <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
     <td ></br>Rosas Vermelhas</br><R175></R75>R$ 15,00</td></br>
+    </tr>
+    <tr>
     <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
     <td ></br>Tulipas</br><R175></R75>R$ 30,00</td></br>
-
 </tr>
+</div>
 </body>
 </html>
