--- a/kits.html
+++ b/kits.html
@@ -19,9 +19,6 @@
         <font color="red"><a href="arranjos.html">Arranjos</a></font> 
     </tr>
     <tr> 
-        <font color="red"><a href="promocoes.html">Promoções</a></font>
-    </tr>
-    <tr> 
         <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
     </tr>
     <tr> 
@@ -33,16 +30,16 @@
 </h3>
     <td>Kits: </td> </br></br>
     <tr> 
-    <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Azaléia </br>R$ 20,00</td></br>
-    <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosa do Deserto </br>R$ 150,00</td></br>
-    <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Orquídea</br><R175></R75>R$ 75,00</td></br>
-    <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosas Vermelhas</br><R175></R75>R$ 15,00</td></br>
-    <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Tulipas</br><R175></R75>R$ 30,00</td></br>
+    <img src="kit1.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Kit 2 Phalaenopsis </br>R$ 120,00</td></br>
+    <img src="kit2.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Kit 3 Violetas </br>R$ 45,00</td></br>
+    <img src="kit3.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Kit 2 Cactos</br> R$ 35,00</td></br>
+    <img src="kit4.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br> Kit 2 Prímulas</br>R$ 40,00</td></br>
+    <img src="kit5.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>Kit 2 Jacinto</br>R$ 100,00</td></br>
 
 </tr>
 </body>
