--- a/maisvendidas.html
+++ b/maisvendidas.html
@@ -19,9 +19,6 @@
         <font color="red"><a href="arranjos.html">Arranjos</a></font> 
     </tr>
     <tr> 
-        <font color="red"><a href="promocoes.html">Promoções</a></font>
-    </tr>
-    <tr> 
         <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
     </tr>
     <tr> 
@@ -32,18 +29,23 @@
     </tr>
 </h3>
     <td>Mais Vendidas: </td> </br></br>
-    <tr> 
-    <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Azaléia </br>R$ 20,00</td></br>
-    <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosa do Deserto </br>R$ 150,00</td></br>
-    <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Orquídea</br><R175></R75>R$ 75,00</td></br>
-    <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosas Vermelhas</br><R175></R75>R$ 15,00</td></br>
-    <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Tulipas</br><R175></R75>R$ 30,00</td></br>
-
+    <tr>
+    <td ></br>Tulipas: </br></td></br>
+    <img src="mais1.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>R$30,00</br></td></br>
+    <td ></br>Girassóis: </br></td></br>
+    <img src="mais2.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>R$25,00</br></td></br>
+    <td ></br>Margaridas: </br></td></br>
+    <img src="mais3.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>R$20,00</br></td></br>
+    <td ></br>Orquídeas: </br></td></br>
+    <img src="mais4.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>R$70,00</br></td></br>
+    <td ></br>Suculentas: </br></td></br>
+    <img src="mais5.jpg" width="200" alt=" " width="20%" height="180">
+    <td ></br>R$10,00</br></td></br>
+    
 </tr>
 </body>
 </html>
