--- a/tiposdeflores.html
+++ b/tiposdeflores.html
@@ -19,9 +19,6 @@
         <font color="red"><a href="arranjos.html">Arranjos</a></font> 
     </tr>
     <tr> 
-        <font color="red"><a href="promocoes.html">Promoções</a></font>
-    </tr>
-    <tr> 
         <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
     </tr>
     <tr> 
@@ -32,18 +29,29 @@
     </tr>
 </h3>
     <td>Tipos de Flores: </td> </br></br>
-    <tr> 
-    <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Azaléia </br>R$ 20,00</td></br>
-    <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosa do Deserto </br>R$ 150,00</td></br>
-    <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Orquídea</br><R175></R75>R$ 75,00</td></br>
-    <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosas Vermelhas</br><R175></R75>R$ 15,00</td></br>
-    <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Tulipas</br><R175></R75>R$ 30,00</td></br>
-
-</tr>
+    <tr>
+        <td ></br>Amarílis: </br></td></br>
+        <img src="tipo1.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$25,00</br></td></br>
+        <td ></br>Begônias: </br></td></br>
+        <img src="tipo2.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$35,00</br></td></br>
+        <td ></br>Cactos: </br></td></br>
+        <img src="tipo3.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$20,00</br></td></br>
+        <td ></br>Orquídeas: </br></td></br>
+        <img src="tipo4.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$70,00</br></td></br>
+        <td ></br>Rosas: </br></td></br>
+        <img src="tipo5.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$20,00</br></td></br>
+        <td ></br>Suculentas: </br></td></br>
+        <img src="tipo6.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$15,00</br></td></br>
+        <td ></br>Margaridas: </br></td></br>
+        <img src="tipo7.jpg" width="200" alt=" " width="20%" height="180">
+        <td ></br>R$25,00</br></td></br>
+        
+    </tr>
 </body>
 </html>
