--- a/atendimento.html
+++ b/atendimento.html
@@ -32,7 +32,7 @@
                     <input type="text" name="assunto" id="assunto" size="35"></br></br>
                     <b><label for="name">MENSAGEM</label></b>
                     <label for="name" style="color: rgb(170, 7, 7)">*</label></br>
-                    <input type="text" name="mensagem" id="mensagem" style='font-size:80px'></BR></br>
+                    <textarea rows="5" cols="33" size="40"></textarea></br></br>
                     <input type="checkbox" name="enviar" value="ENVIAR UMA CÓPIA PARA VOCÊ">
                     <b><label for="name">ENVIAR UMA CÓPIA PARA VOCÊ</label></b></BR></br>
                     <input type="submit" name="enviar" value="ENVIAR MENSAGEM">
