--- a/tiposdeflores.html
+++ b/tiposdeflores.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipos de Flores</title>
 </head>
-<body>
+<body style="background-color:bisque">
     <img src="tipos.jpg" width="1500" alt=" "   width="20%" height="180">
     <h3></br>
     <tr> 
