--- a/arranjos.html
+++ b/arranjos.html
@@ -1,49 +1,52 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arranjos</title>
 </head>
-<body style="background-color:bisque">
-    <img src="arranjos.jpg" width="1500" alt=" "   width="20%" height="180">
-    <h3></br>
-    <tr> 
-        <font color="red"><a href="home.html">Home</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="kits.html">Kits</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="arranjos.html">Arranjos</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="maisvendidas.html">Mais Vendidas</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="atendimento.html">Atendimentos</a></font>
-    </tr>
-</h3>
-    <td>Arranjos: </td> </br></br>
-    <tr> 
-    <img src="arranjo1.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Arranjo de Rosas </br>R$ 30,00</td></br>
-    <img src="arranjo2.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Arranjo de Suculentas </br>R$ 20,00</td></br>
-    <img src="arranjo3.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Arranjo de Margaridas</br>R$ 35,00</td></br>
-    <img src="arranjo4.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Arranjo de Lírios</br>R$ 45,00</td></br>
-    <img src="arranjo5.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Arranjo de Cactos e Suculentas</br>R$ 40,00</td></br>
 
-</tr>
+<body style="background-color:#ffe4c4">
+    
+        <img src="arranjos.jpg" width="1500" alt=" " width="20%" height="180">
+        <h3></br>
+            <table width="600" bgcolor="">
+            <tr>
+            <td><font color="red"><a href="home.html"> Home </a></font></td>
+               <TD> <font color="red"><a href="kits.html"> Kits</a></font></TD>
+               <td> <font color="red"><a href="arranjos.html"> Arranjos </a></font></td>
+               <td> <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font></td>
+               <td> <font color="red"><a href="atendimento.html"> Atendimentos</a></font></td>
+        </tr></table>
+        </h3>
+        <table border="0px" bordercolor="bisque" width="600px">
+        <h2>Arranjos: <h2>
+                <tr>
+                    <td>
+                        <img src="arranjo1.jpg" width="200" alt=" " width="20%" height="180">
+                        <br>Arranjo de Rosas<br>R$ 30,00<br>
+                    </td>
+                    <td>
+                        <img src="arranjo2.jpg" width="200" alt=" " width="20%" height="180">
+                        <br>Arranjo de Suculentas <br>R$ 20,00<br>
+                    </td>
+                </tr>
+                <tr>
+                    <td> <br><br>
+                        <img src="arranjo3.jpg" width="200" alt=" " width="20%" height="180">
+                        <br>Arranjo de Margaridas</br>R$ 35,00<br>
+                    </td>
+                    <td></br></br>
+                        <img src="arranjo4.jpg" width="200" alt=" " width="20%" height="180">
+                        </br>Arranjo de Lírios</br>R$ 45,00<br>
+                    </td>
+                    <td></br></br>
+                        <img src="arranjo5.jpg" width="200" alt=" " width="20%" height="180">
+                        </br>Arranjo de Cactos </br>R$ 40,00</br>
+                    </td>
+                </tr>
+    </table>
 </body>
+
 </html>
-
-
-
