--- a/tiposdeflores.html
+++ b/tiposdeflores.html
@@ -1,57 +1,75 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tipos de Flores</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body style="background-color:bisque">
-    <img src="tipos.jpg" width="1500" alt=" "   width="20%" height="180">
+
+<body>
+    <img src="tipos.jpg" width="1500" alt=" " width="20%" height="180">
     <h3></br>
-    <tr> 
-        <font color="red"><a href="home.html">Home</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="kits.html">Kits</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="arranjos.html">Arranjos</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="maisvendidas.html">Mais Vendidas</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="atendimento.html">Atendimentos</a></font>
-    </tr>
-</h3>
-    <td>Tipos de Flores: </td> </br></br>
+        <table width="600" bgcolor="">
+            <tr>
+                <td>
+                    <font color="red"><a href="home.html"> Home </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="promocoes.html"> Promoções</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="kits.html"> Kits</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="arranjos.html"> Arranjos </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="atendimento.html"> Atendimentos</a></font>
+                </td>
+            </tr>
+        </table>
+    </h3>
+    <table border="0px" bordercolor="bisque" width="600px">
+    <h2>Tipos de Flores: </h2>
     <tr>
-        <td ></br>Amarílis: </br></td></br>
-        <img src="tipo1.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$25,00</br></td></br>
-        <td ></br>Begônias: </br></td></br>
-        <img src="tipo2.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$35,00</br></td></br>
-        <td ></br>Cactos: </br></td></br>
-        <img src="tipo3.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$20,00</br></td></br>
-        <td ></br>Orquídeas: </br></td></br>
-        <img src="tipo4.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$70,00</br></td></br>
-        <td ></br>Rosas: </br></td></br>
-        <img src="tipo5.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$20,00</br></td></br>
-        <td ></br>Suculentas: </br></td></br>
-        <img src="tipo6.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$15,00</br></td></br>
-        <td ></br>Margaridas: </br></td></br>
-        <img src="tipo7.jpg" width="200" alt=" " width="20%" height="180">
-        <td ></br>R$25,00</br></td></br>
-        
+        <td>
+            Amarílis: </br></br>
+            <img src="tipo1.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$25,00</br></br>
+        </td>
+        <td>Begônias: </br></br>
+            <img src="tipo2.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$35,00</br></br>
+        </td>
+        <td>
+            Cactos: </br></br>
+            <img src="tipo3.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$20,00</br></br>
+        </td>
     </tr>
+    <tr>
+        <td>
+            </br>Orquídeas: </br></br>
+            <img src="tipo4.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$70,00</br></br>
+        </td>
+        <td>
+            </br>Rosas: </br></br>
+            <img src="tipo5.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$20,00</br></br>
+        </td>
+        <td>
+            </br>Margaridas: </br></br>
+            <img src="tipo7.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$25,00</br></br>
+        </td>
+    </tr>
+</table>
 </body>
+
 </html>
