--- a/promocoes.html
+++ b/promocoes.html
@@ -1,55 +1,66 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" >
-    <title>Home</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Promoções</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body style="background-color:bisque">
-    <img src="flor_home.jpeg" width="1800" alt=" "   width="20%" height="180">
+
+<body>
+    <img src="flor_home.jpeg" width="1800" alt=" " width="20%" height="180">
     <h3></br>
-    <tr> 
-        <font color="red"><a href="home.html">Home</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="kits.html">Kits</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="arranjos.html">Arranjos</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="maisvendidas.html">Mais Vendidas</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="atendimento.html">Atendimentos</a></font>
-    </tr>
-</h3>
-<div>
-    <td>Promoções: </td> </br></br>
-    <tr> 
-    <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Azaléia </br>R$ 20,00</td></br>
-    </tr>
-    <tr>
-    <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosa do Deserto </br>R$ 150,00</td></br>
-    </tr>
-    <tr>
-    <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Orquídea</br><R175></R75>R$ 75,00</td></br>
-    </tr>
-    <tr>
-    <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Rosas Vermelhas</br><R175></R75>R$ 15,00</td></br>
-    </tr>
-    <tr>
-    <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Tulipas</br><R175></R75>R$ 30,00</td></br>
-</tr>
-</div>
+        <table width="600" bgcolor="">
+            <tr>
+                <td>
+                    <font color="red"><a href="home.html"> Home</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="promocoes.html"> Promoções</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="kits.html"> Kits</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="arranjos.html"> Arranjos </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="atendimento.html"> Atendimentos</a></font>
+                </td>
+            </tr>
+        </table>
+    </h3>
+    <table border="0px" bordercolor="bisque" width="600px">
+        <tr>
+            <h2>Promoções: </h2> </br></br>
+            <td>
+                <img src="azaleia.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Azaléia </br>R$ 20,00</br></br>
+            </td>
+            <td>
+                <img src="rosa_do_deserto.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Rosa do Deserto </br>R$ 150,00</br></br>
+            </td>
+            <td>
+                <img src="orquidea.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Orquídea</br>R$ 75,00</br></br>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <img src="rosas_vermelhas.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Rosas Vermelhas</br>R$ 15,00</br></br>
+            </td>
+            <td>
+                <img src="tulipas.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Tulipas</br>R$ 30,00</br></br>
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
