--- a/maisvendidas.html
+++ b/maisvendidas.html
@@ -1,51 +1,74 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mais Vendidas</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body style="background-color:bisque">
-    <img src="mais.vendidas.jpg" width="1500" alt=" "   width="20%" height="180">
+
+<body>
+    <img src="mais.vendidas.jpg" width="1500" alt=" " width="20%" height="180">
     <h3></br>
-    <tr> 
-        <font color="red"><a href="home.html">Home</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="kits.html">Kits</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="arranjos.html">Arranjos</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="maisvendidas.html">Mais Vendidas</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="atendimento.html">Atendimentos</a></font>
-    </tr>
-</h3>
-    <td>Mais Vendidas: </td> </br></br>
-    <tr>
-    <td ></br>Tulipas: </br></td></br>
-    <img src="mais1.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>R$30,00</br></td></br>
-    <td ></br>Girassóis: </br></td></br>
-    <img src="mais2.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>R$25,00</br></td></br>
-    <td ></br>Margaridas: </br></td></br>
-    <img src="mais3.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>R$20,00</br></td></br>
-    <td ></br>Orquídeas: </br></td></br>
-    <img src="mais4.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>R$70,00</br></td></br>
-    <td ></br>Suculentas: </br></td></br>
-    <img src="mais5.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>R$10,00</br></td></br>
-    
-</tr>
+        <table width="600" bgcolor="">
+            <tr>
+                <td>
+                    <font color="red"><a href="home.html"> Home </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="promocoes.html"> Promoções</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="kits.html"> Kits</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="arranjos.html"> Arranjos </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="maisvendidas.html"> Mais Vendidas </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="atendimento.html"> Atendimentos</a></font>
+                </td>
+            </tr>
+        </table>
+    </h3>
+    <table border="0px" bordercolor="bisque" width="600px">
+        <h2>Mais Vendidas: </h2>
+        <tr>
+            <td>
+                Tulipas: </br><br>
+                <img src="mais1.jpg" width="200" alt=" " width="20%" height="180">
+                </br>R$30,00</br>
+            </td>
+            <td>
+                </br>Girassóis: </br></br>
+            <img src="mais2.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$25,00</br></br>
+            </td>
+            <td>
+                </br>Margaridas: </br></br>
+            <img src="mais3.jpg" width="200" alt=" " width="20%" height="180">
+            </br>R$20,00</br></br>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                </br>Orquídeas: </br></br>
+                <img src="mais4.jpg" width="200" alt=" " width="20%" height="180">
+                </br>R$70,00</br></br>
+            </td>
+            <td>
+                </br>Suculentas: </br></br>
+                <img src="mais5.jpg" width="200" alt=" " width="20%" height="180">
+                </br>R$10,00</br></br>
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
