--- a/kits.html
+++ b/kits.html
@@ -1,46 +1,69 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kits</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
-<body style="background-color:bisque">
-    <img src="flor_kit.jpg" width="1500" alt=" "   width="20%" height="180">
-    <h3></br>
-    <tr> 
-        <font color="red"><a href="home.html">Home</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="kits.html">Kits</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="arranjos.html">Arranjos</a></font> 
-    </tr>
-    <tr> 
-        <font color="red"><a href="tiposdeflores.html">Tipos de Flores</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="maisvendidas.html">Mais Vendidas</a></font>
-    </tr>
-    <tr> 
-        <font color="red"><a href="atendimento.html">Atendimentos</a></font>
-    </tr>
-</h3>
-    <td>Kits: </td> </br></br>
-    <tr> 
-    <img src="kit1.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Kit 2 Phalaenopsis </br>R$ 120,00</td></br>
-    <img src="kit2.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Kit 3 Violetas </br>R$ 45,00</td></br>
-    <img src="kit3.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Kit 2 Cactos</br> R$ 35,00</td></br>
-    <img src="kit4.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br> Kit 2 Prímulas</br>R$ 40,00</td></br>
-    <img src="kit5.jpg" width="200" alt=" " width="20%" height="180">
-    <td ></br>Kit 2 Jacinto</br>R$ 100,00</td></br>
 
-</tr>
+<body>
+    <img src="flor_kit.jpg" width="1500" alt=" " width="20%" height="180">
+    <h3></br>
+        <table width="600" bgcolor="">
+            <tr>
+                <td>
+                    <font color="red"><a href="home.html"> Home </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="promocoes.html"> Promoções</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="kits.html"> Kits</a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="arranjos.html"> Arranjos </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="maisvendidas.html"> Mais Vendidas </a></font>
+                </td>
+                <td>
+                    <font color="red"><a href="atendimento.html"> Atendimentos</a></font>
+                </td>
+            </tr>
+        </table>
+    </h3>
+    <table>
+        <h2>Kits: </h2>
+        <tr>
+            <td>
+                <img src="kit1.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Kit 2 Phalaenopsis </br>R$ 120,00</br>
+            </td>
+            <td>
+                <img src="kit2.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Kit 3 Violetas </br>R$ 45,00</br>
+            </td>
+            <td>
+                <img src="kit3.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Kit 2 Cactos</br> R$ 35,00</br>
+            </td>
+        </tr>
+        <tr>
+            <td><br><br>
+                <img src="kit4.jpg" width="200" alt=" " width="20%" height="180">
+                </br> Kit 2 Prímulas</br>R$ 40,00</br><br><br>
+            </td>
+            <td>
+                <img src="kit5.jpg" width="200" alt=" " width="20%" height="180">
+                </br>Kit 2 Jacinto</br>R$ 100,00</br>
+            </td>
+        </tr>
+    </table>
 </body>
+
 </html>
