--- a/home.html
+++ b/home.html
@@ -1,22 +1,30 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Floricultura</title>
+    <title>Floricultura</title>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
-    <h1>Opções</h1>
-    <li> <a href="home.html "> Home </a> </li>
-    <li> <a href="promocoes.html"> Promoções</a> </li>
-    <li> <a href="kits.html "> kits </a> </li>
-    <li> <a href="arranjos.html "> Arranjos</a> </li>
-    <li> <a href="tiposdeflores.html "> Tipos de Flores </a> </li>
-    <li> <a href="maisvendidas.html "> Mais Vendidas </a> </li>
-    <li> <a href="atendimento.html "> Atendimento </a> </li>
+    <table border="2px" bordercolor="black" width="600px" align="center">
+        <tr>
+            <td align="center">
+                <img src="logofloricultura.png" width="60%" alt="inserir a descrição da imagem">
+            <h1>Opções</h1>
+            <li align="center"> <a href="home.html "> Home </a> </li>
+            <li align="center"> <a href="promocoes.html"> Promoções</a> </li>
+            <li align="center"> <a href="kits.html "> kits </a> </li>
+            <li align="center"> <a href="arranjos.html "> Arranjos</a> </li>
+            <li align="center"> <a href="tiposdeflores.html "> Tipos de Flores </a> </li>
+            <li align="center"> <a href="maisvendidas.html "> Mais Vendidas </a> </li>
+            <li align="center"> <a href="atendimento.html "> Atendimento </a> </li>
+            </td>
+        </tr>
+
+    </table>
 </body>
+
 </html>
