--- a/atendimento.html
+++ b/atendimento.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimento</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
 <body>
-    <table border="1px" bordercolor="black" width="100%" align="center" style="background-color:rgb(93, 236, 229)">
+    <table border="1px" bordercolor="black" width="100%" align="center" >
         <thead>
             <tr>
                 <td width="80px">
