--- a/arranjos.html
+++ b/arranjos.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="pt-br">
 
@@ -5,18 +6,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Arranjos</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 
-<body style="background-color:#ffe4c4">
+<body>
     
         <img src="arranjos.jpg" width="1500" alt=" " width="20%" height="180">
         <h3></br>
             <table width="600" bgcolor="">
             <tr>
             <td><font color="red"><a href="home.html"> Home </a></font></td>
+            <TD> <font color="red"><a href="promocoes.html"> Promoções</a></font></TD>
                <TD> <font color="red"><a href="kits.html"> Kits</a></font></TD>
                <td> <font color="red"><a href="arranjos.html"> Arranjos </a></font></td>
                <td> <font color="red"><a href="tiposdeflores.html"> Tipos de Flores </a></font></td>
+               <td> <font color="red"><a href="maisvendidas.html"> Mais Vendidas </a></font></td>
                <td> <font color="red"><a href="atendimento.html"> Atendimentos</a></font></td>
         </tr></table>
         </h3>
